# 5-ai-people-for-community-03-project

./: .env  .gitignore  README.md  api.py  fastapi_app.py  main.py  pyproject.toml  requirements.txt  scheduler.py
db/: mydatabase.py
myagents/: atlasfx_agent.py  cryptonova_agent.py  fx_graphs.py  janemacro_agent.py  maxmentor_agent.py  quantedge_agent.py
