[project]
name = "real-human-trader-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "grpcio>=1.74.0",
    "httpx>=0.28.1",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai-agents>=0.2.4",
    "plotly>=6.2.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "tensorflow-cpu>=2.20.0",
    "tensorflow-probability>=0.25.0",
]
